--- a/index.html
+++ b/index.html
@@ -3,15 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flex Box</title>
     <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="item red">Item 1</div>
-      <div class="item green">Item 2</div>
-      <div class="item blue">Item 3</div>
-      <div class="item yellow">Item 4</div>
+    <img
+      class="left"
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStNKqSjlxOmzP0i9wnUzdD8jBcg3nlb7cdeA&s"
+      height="100"
+      alt="Not Availble"
+    />
+
+    <div>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, eius quos.
+      Ipsum beatae laboriosam sint. Repudiandae dicta voluptates beatae.
+      Inventore praesentium alias excepturi asperiores tempora magni, maiores
+      similique totam omnis!
+    </div>
+
+    <div class="clear">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+      doloribus dicta a, delectus cupiditate odit dignissimos neque debitis
+      aperiam ab modi quaerat inventore reiciendis facilis quo quis, tenetur,
+      minima aspernatur?
     </div>
   </body>
 </html>
