--- a/index.html
+++ b/index.html
@@ -3,15 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flex Box</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="item red">Item 1</div>
-      <div class="item green">Item 2</div>
-      <div class="item blue">Item 3</div>
-      <div class="item yellow">Item 4</div>
+    <div class="FrameAll">
+      <div class="header">
+        <div class="logo">Logo</div>
+
+        <div class="menu">
+          <div class="home">Home</div>
+          <div class="about">About</div>
+          <div class="contact">Contact</div>
+        </div>
+        <div class="avatar">avatar</div>
+      </div>
+
+      <div class="main">
+        <div class="sidebar">Sidebar</div>
+        <div class="content">content</div>
+      </div>
+
+      <div class="footer">Footer</div>
     </div>
   </body>
 </html>
