--- a/index.html
+++ b/index.html
@@ -3,28 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>FeetBack</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
-    <div class="FrameAll">
-      <div class="header">
-        <div class="logo">Logo</div>
+    <h1>Binh Luan</h1>
 
-        <div class="menu">
-          <div class="home">Home</div>
-          <div class="about">About</div>
-          <div class="contact">Contact</div>
-        </div>
-        <div class="avatar">avatar</div>
-      </div>
-
-      <div class="main">
-        <div class="sidebar">Sidebar</div>
-        <div class="content">content</div>
-      </div>
-
-      <div class="footer">Footer</div>
+    <div>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum beatae
+      veritatis dolores atque repellat eius illum recusandae cupiditate nulla
+      quidem eveniet, omnis nobis molestias suscipit molestiae mollitia expedita
+      saepe minima.
     </div>
+
+    <textarea rows="10" cols="200"> Binh luan tai day...</textarea><br />
+    <input placeholder="Name" />
+    <input placeholder="Email" />
+    <input placeholder="TanTrang web " />
+    <button>Phan hoi</button>
   </body>
 </html>
